adicionado celery no projeto

--- a/chamadoscmc/templates/core/edit.html
+++ b/chamadoscmc/templates/core/edit.html
@@ -22,48 +22,37 @@
                 <div class="panel-body">
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <span class="badge">{{ object.data_abertura|date:"d/m/Y"  }}</span>
-                        Data de abertura
+                        <b>Data de abertura: </b>{{ object.data_abertura|date:"d/m/Y"  }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.usuario }}</span>
-                        Solicitante
+                        <b>Solicitante: </b>{{ object.usuario }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ atendente }}</span>
-                        Atendente
+                        <b>Atendente: </b>{{ atendente }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.ramal }}</span>
-                        Ramal
+                        <b>Ramal: </b>{{ object.ramal }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.setor }}</span>
-                        Setor
+                        <b>Setor</b>: {{ object.setor }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.grupo_servico }}</span>
-                        Grupo de serviço
+                        <b>Grupo de serviço: </b>{{ object.grupo_servico }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.servico }}</span>
-                        Serviço
+                        <b>Serviço: </b>{{ object.servico }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.assunto }}</span>
-                        Assunto
+                        <b>Assunto: </b>{{ object.assunto }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.descricao }}</span>
-                        Descrição
+                        <b>Descrição: </b>{{ object.descricao }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.prioridade }}</span>
-                        Prioridade
+                        <b>Prioridade: </b>{{ object.prioridade }}
                     </li>
                     <li class="list-group-item">
-                        <span class="badge">{{ object.status }}</span>
-                        Status
+                        <b>Status: </b>{{ object.status }}
                     </li>
                 </ul>
                 </div>
