--- a/chamadoscmc/templates/fila/index.html
+++ b/chamadoscmc/templates/fila/index.html
@@ -402,7 +402,7 @@
         }
 
         function criaChamado() {
-            alert('Cria chamado');
+            location.href = '/chamado/cria/';
         }
 
         function reabre(id_chamado) {
