--- a/chamadoscmc/templates/fila/index.html
+++ b/chamadoscmc/templates/fila/index.html
@@ -428,6 +428,10 @@
                 }
             })
         }
+
+        $(document).ready(function () {
+            $('#id_filtro').selectpicker();
+        });
         
 	</script>
 {% endblock %}
