--- a/chamadoscmc/templates/base.html
+++ b/chamadoscmc/templates/base.html
@@ -27,6 +27,12 @@
                         <li class="active"><a href="/">Home</a></li>
                         <li><a href="/fila/">Atendimento</a></li>
                         <li><a href="/chamado/">Meus chamados</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Cadastro<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/cadastro/servico/">Serviços</a></li>
+                            </ul>
+                        </li>
                         <li><a href="/autentica/sair/">Sair</a></li>
                     </ul>
                 </div>
