--- a/chamadoscmc/templates/base.html
+++ b/chamadoscmc/templates/base.html
@@ -30,6 +30,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Cadastro<span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li><a href="/cadastro/grupo_servico/">Grupos de Serviço</a></li>
                                 <li><a href="/cadastro/servico/">Serviços</a></li>
                             </ul>
                         </li>
