--- a/chamadoscmc/templates/core/cadastro/grupo_servico/index.html
+++ b/chamadoscmc/templates/core/cadastro/grupo_servico/index.html
@@ -6,17 +6,11 @@
 {% block content %}
 
     <div class="panel panel-primary">
-        <div class="panel-heading">Serviços</div>
+        <div class="panel-heading">Grupos de Serviço</div>
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <h4>Filtrar por grupo :</h4><select id="id_filtro" name="id_filtro" data-live-search="true" data-width="100%"></select>
-                    <br/><br/>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <table id="tservicos" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
+                    <table id="tgrupos" class="table table-striped table-hover table-bordered fonteTable" width="100%" cellspacing="0"></table>
                 </div>
             </div>
         </div>
@@ -25,7 +19,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <button type="button" class="btn btn-primary" onclick="javascript:criaServico();">Novo</button>
+                    <button type="button" class="btn btn-primary" onclick="javascript:criaGrupo();">Novo</button>
                 </div>
             </div>
         </div>
@@ -40,8 +34,8 @@
             <h4 class="modal-title" id="exampleModalLabel">Confirma exclusão ?</h4>
           </div>
           <div class="modal-body">
-            <h4>Serviço: <span id="servico_descricao" name="servico_descricao"/></h4>
-            <form class="exclui" method="POST" action="/cadastro/servico/delete/">{% csrf_token %}
+            <h4>Grupo: <span id="grupo_descricao" name="grupo_descricao"/></h4>
+            <form class="exclui" method="POST" action="/cadastro/grupo_servico/delete/">{% csrf_token %}
               <div class="form-group">
                 <input type="hidden" name="pk" id="pk" />
               </div>
@@ -62,7 +56,7 @@
 
     <script>
 
-        var tableServicos;
+        var tableGrupos;
 
         $(document).ready(function() {
             $("button#submit").click(function() {
@@ -70,25 +64,19 @@
                 $("#confirmaModal").modal('hide');
             })
 
-            montaComboFiltro();
-
-            tableServicos = $('#tservicos').DataTable({
+            tableGrupos = $('#tgrupos').DataTable({
                 responsive: true,
                 "order": [[ 1, "asc" ]],
                 "columns": [
                     { 
                         title: "ID" ,
-                        data: 'servico_id'
+                        data: 'gs_id'
                     },
                     { 
-                        title: "Grupo" ,
-                        data: 'grupo_id'
-                    },
-                    { 
-                        title: "Serviço",
-                        data: 'servico_descricao',
+                        title: "Grupo",
+                        data: 'gs_descricao',
                         render: function(data, type, full, meta) {
-                            return '<a href="/cadastro/servico/edit/' + full.servico_id + '">' + data + '</a>';
+                            return '<a href="/cadastro/grupo_servico/edit/' + full.gs_id + '">' + data + '</a>';
                         }
                     }
                     
@@ -101,22 +89,17 @@
                     },
                     {
                         "targets": [1],
-                        "visible": false,
+                        "visible": true,
                         "searchable": true
                     },
                     {
                         "targets": [2],
                         "visible": true,
-                        "searchable": true
-                    },
-                    {
-                        "targets": [3],
-                        "visible": true,
                         "searchable": false,
                         "className": "dt-center",
                         "data": null,
                         render: function(data, type, full, meta) {
-                            return '<a href="" data-toggle="modal" data-target="#confirmaModal" data-servico_id="' + full.servico_id + '" data-servico_descricao="' + full.servico_descricao + '"><i class="fa fa-trash" aria-hidden="true" style="color:red;"></i></a>';
+                            return '<a href="" data-toggle="modal" data-target="#confirmaModal" data-grupo_id="' + full.gs_id + '" data-grupo_descricao="' + full.gs_descricao + '"><i class="fa fa-trash" aria-hidden="true" style="color:red;"></i></a>';
                         }
                 }
 
@@ -138,35 +121,30 @@
                 "bFilter": true,
                 "bInfo": false,
                 "ajax": {
-                    "url": "/chamado/api/servico_todos/{{ request.session.setor_id }}/",
+                    "url": "/chamado/api/grupo_servico_todos/{{ request.session.setor_id }}/",
                     "dataSrc": "",
                 },
                 "sDom": '<"top"i>rt<"bottom"lp><"clear">',
-            });
-
-            $('#id_filtro').change(function() {
-                tableServicos.columns(1).search(this.value).draw();
-                window.sessionStorage.setItem('combo_filtro_grupo', this.value);
             });
 
         });
 
         $('#confirmaModal').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
-            var pk = button.data('servico_id');
-            var recipient = button.data('servico_descricao');
+            var pk = button.data('grupo_id');
+            var recipient = button.data('grupo_descricao');
             var modal = $(this);
             modal.find('#pk').val(pk);
-            modal.find('#servico_descricao').html(recipient);
+            modal.find('#grupo_descricao').html(recipient);
         });
 
 
-        function criaServico() {
-            location.href = '/cadastro/servico/new/';
+        function criaGrupo() {
+            location.href = '/cadastro/grupo_servico/new/';
         }
 
         function exclui() {
-            request_url = '/cadastro/api/servico/delete/' + $('#pk').val() + '/';
+            request_url = '/cadastro/api/grupo_servico/delete/' + $('#pk').val() + '/';
 
             $.ajax({
                 url: request_url,
@@ -176,7 +154,7 @@
                 data: $('form.exclui').serialize(),
                 success: function(result){
                     console.log($('form.exclui').serialize());
-                    tableServicos.ajax.reload(null, false);
+                    tableGrupos.ajax.reload(null, false);
                 },
                 error: function(xhr, status, error) {
                     console.log(status);
@@ -185,35 +163,6 @@
                 }
             })
         }
-
-        function montaComboFiltro() {
-            var request_url = '/chamado/api/grupo_servico_todos/{{ request.session.setor_id }}/';
-
-            $.ajax({
-                url: request_url,
-                dataType: 'json',
-                success: function(result){
-                    var toAppend = '';
-                    $.each(result, function(index, element) {
-                        if (window.sessionStorage.getItem('combo_filtro_grupo') != null && window.sessionStorage.getItem('combo_filtro_grupo') == element.gs_id)
-                            toAppend += '<option value="' + element.gs_id + '" selected>' + element.gs_descricao + '</option>';
-                        else
-                            toAppend += '<option value="' + element.gs_id + '">' + element.gs_descricao + '</option>';
-                    });
-                    $('#id_filtro').append(toAppend);
-                    $('#id_filtro').selectpicker();
-                    tableServicos.columns(1).search($('#id_filtro').val()).draw();
-
-                },
-                error: function(xhr, status, error) {
-                    console.log('Erro ao carregar grupos de serviço');
-                    console.log(xhr.readyState);
-                    console.log(status);
-                    console.log(error);
-                }
-            })
-        }
-
     </script>
 
 {% endblock %}
