--- a/chamadoscmc/templates/base.html
+++ b/chamadoscmc/templates/base.html
@@ -34,6 +34,12 @@
                                 <li><a href="/cadastro/servico/">Serviços</a></li>
                             </ul>
                         </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Relatórios<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/relatorio/chamado/">Chamados</a></li>
+                            </ul>
+                        </li>
                         <li><a href="/autentica/sair/">Sair</a></li>
                     </ul>
                 </div>
