trabalho comitado na sexta

--- a/chamadoscmc/templates/base.html
+++ b/chamadoscmc/templates/base.html
@@ -32,6 +32,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/cadastro/grupo_servico/">Grupos de Serviço</a></li>
                                 <li><a href="/cadastro/servico/">Serviços</a></li>
+                                <li><a href="/cadastro/setor/">Setores</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
