ajustes e validacao de imagens

--- a/chamadoscmc/templates/core/detail.html
+++ b/chamadoscmc/templates/core/detail.html
@@ -242,7 +242,9 @@
             showBrowse: false,
             showPreview: true,
             showCaption: false,
-            allowedFileExtensions: ["jpg", "png", "gif"],
+            allowedFileExtensions: ["jpg", "png", "gif", "jpeg"],
+            maxFileSize: 5000,
+            maxFilesNum: 3,
             overwriteInitial: false,
             initialPreviewAsData: true,
             initialPreviewShowDelete: false,
