--- a/chamadoscmc/templates/fila/index.html
+++ b/chamadoscmc/templates/fila/index.html
@@ -179,6 +179,7 @@
                     	"sPrevious": '<span class="glyphicon glyphicon-backward"></span>'
                 	}
             	},
+                "deferRender": true,
         		"bPaginate" : true,
         		"bLengthChange": false,
         		"bFilter": true,
@@ -292,6 +293,7 @@
                     	"sPrevious": '<span class="glyphicon glyphicon-backward"></span>'
                 	}
             	},
+                "deferRender": true,
         		"bPaginate" : true,
         		"bLengthChange": false,
         		"bFilter": false,
