--- a/chamadoscmc/templates/core/cadastro/grupo_servico/index.html
+++ b/chamadoscmc/templates/core/cadastro/grupo_servico/index.html
@@ -99,7 +99,7 @@
                         "className": "dt-center",
                         "data": null,
                         render: function(data, type, full, meta) {
-                            return '<a href="" data-toggle="modal" data-target="#confirmaModal" data-grupo_id="' + full.gs_id + '" data-grupo_descricao="' + full.gs_descricao + '"><i class="fa fa-trash" aria-hidden="true" style="color:red;"></i></a>';
+                            return '<a href="" data-toggle="modal" data-target="#confirmaModal" data-grupo_id="' + full.gs_id + '" data-grupo_descricao="' + full.gs_descricao + '"><i class="far fa-trash-alt" aria-hidden="true" style="color:Tomato;" title="Exclui Grupo de Serviço"></i></a>';
                         }
                 }
 
@@ -116,6 +116,7 @@
                         "sPrevious": '<span class="glyphicon glyphicon-backward"></span>'
                     }
                 },
+                "deferRender": true,
                 "bPaginate" : true,
                 "bLengthChange": false,
                 "bFilter": true,
